[gd_scene load_steps=11 format=3 uid="uid://bdv5fulluq6xw"]

[ext_resource type="Script" uid="uid://cbs73qrun6sj4" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Script" uid="uid://d070mqp5unjky" path="res://scripts/camera_2d.gd" id="2_p57ef"]
[ext_resource type="PackedScene" uid="uid://b2t1f8rkw52mt" path="res://scenes/train.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://rq8dlyspro46" path="res://scenes/track.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://b1064yqqmy7mf" path="res://scenes/station.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://cxgimf5dgovcu" path="res://scenes/light.tscn" id="7_gee14"]
[ext_resource type="PackedScene" uid="uid://ddwk7q8585at4" path="res://scenes/wall.tscn" id="7_u5sy4"]

[sub_resource type="ButtonGroup" id="ButtonGroup_lbhrr"]

[sub_resource type="Curve2D" id="Curve2D_lbhrr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 80, -32, 0, 0, 0, 0, -16, -32)
}
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tnpc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 89.0
offset_bottom = 31.0

[node name="TrackButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Track"

[node name="StationButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Station"

[node name="TrainButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Train"

[node name="LightButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Light"

[node name="DestroyButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Destroy"

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color(0.314105, 0.268899, 0.268889, 1)
polygon = PackedVector2Array(-128, -96, -128, 160, 208, 160, 208, -96)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(38, 20)
zoom = Vector2(3, 3)
script = ExtResource("2_p57ef")

[node name="GhostTrack" parent="." instance=ExtResource("5_iywne")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(-88, 104)

[node name="GhostStation" parent="." instance=ExtResource("6_p57ef")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(-96, 56)
is_ghost = true

[node name="GhostLight" parent="." instance=ExtResource("7_gee14")]
visible = false
position = Vector2(-96, -64)

[node name="Train" parent="." instance=ExtResource("2_yqjtg")]
curve = SubResource("Curve2D_lbhrr")

[node name="Wall" parent="." instance=ExtResource("7_u5sy4")]
position = Vector2(0, 16)

[node name="Wall2" parent="." instance=ExtResource("7_u5sy4")]
position = Vector2(-16, 16)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0tnpc")
position = Vector2(-64, 80)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="Light3" parent="." instance=ExtResource("7_gee14")]
position = Vector2(-48, -32)

[node name="Light" parent="." instance=ExtResource("7_gee14")]
position = Vector2(-64, 32)

[node name="Light2" parent="." instance=ExtResource("7_gee14")]
position = Vector2(-16, 112)

[connection signal="toggled" from="CanvasLayer/HBoxContainer/TrackButton" to="." method="_on_trackbutton_toggled"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer/StationButton" to="." method="_on_stationbutton_toggled"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer/TrainButton" to="." method="_on_trainbutton_toggled"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer/LightButton" to="." method="_on_light_button_toggled"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer/DestroyButton" to="." method="_on_destroybutton_toggled"]
